--- a/alembic.ini
+++ b/alembic.ini
@@ -55,7 +55,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://startup:pass@127.0.0.1/utodolist
+sqlalchemy.url = mysql://root:000000@127.0.0.1:3306/utodolist
 
 
 [post_write_hooks]
