--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.3
 colorama==0.4.5
 Eel==0.14.0
 Flask==2.2.2
+Flask-HTTPAuth==4.7.0
 Flask-SQLAlchemy==3.0.2
 future==0.18.2
 gevent==22.10.1
@@ -31,6 +32,7 @@ pyinstaller-hooks-contrib==2022.10
 pyparsing==3.0.9
 SQLAlchemy==1.4.42
 typing_extensions==4.3.0
+uWSGI==2.0.20
 waitress==2.1.2
 Werkzeug==2.2.2
 whichcraft==0.6.1
