--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 alembic==1.8.1
 altgraph==0.17.3
+attrs==22.1.0
 auto-py-to-exe==2.23.1
 bottle==0.12.23
 bottle-websocket==0.2.9
 click==8.1.3
 colorama==0.4.5
+coverage==6.5.0
 Eel==0.14.0
+exceptiongroup==1.0.4
 Flask==2.2.2
 Flask-HTTPAuth==4.7.0
 Flask-SQLAlchemy==3.0.2
@@ -16,6 +19,7 @@ greenlet==1.1.3.post0
 gunicorn==20.1.0
 importlib-metadata==4.12.0
 importlib-resources==5.10.0
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.3
@@ -26,11 +30,14 @@ mysql-connector==2.2.9
 mysql-connector-python==8.0.31
 mysqlclient==2.1.1
 packaging==21.3
+pluggy==1.0.0
 protobuf==3.20.1
 pyinstaller==5.5
 pyinstaller-hooks-contrib==2022.10
 pyparsing==3.0.9
+pytest==7.2.0
 SQLAlchemy==1.4.42
+tomli==2.0.1
 typing_extensions==4.3.0
 uWSGI==2.0.20
 waitress==2.1.2
